Bug 291820 - Status message disappearing for last contact
Summary: Status message disappearing for last contact
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: contactlist (other bugs)
Version First Reported In: git-latest
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: 0.4.0
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-18 00:22 UTC by Daniele E. Domenichelli
Modified: 2012-07-06 12:47 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Daniele E. Domenichelli 2012-01-18 00:22:15 UTC
To reproduce the last contact that you see in your contact list must have a status message and you must be using the _full_ contact list view

Put your mouse over the contact (the status is hidden and the overlay with the buttons is shown) and the exit from the bottom but without exiting the contact view. The buttons are hidden, but the status is not shown.
Comment 1 Martin Klapetek 2012-03-07 19:50:05 UTC
Git commit 4a65b36090211451621bbd1a1185a1777a04d942 by Martin Klapetek.
Committed on 07/03/2012 at 20:48.
Pushed by mklapetek into branch 'master'.

Add options to resend and re-request authorization from contacts

Note that it currently crashes haze for msn (purple bug).

Reviewed-by: David Edmundson

M  +35   -12   context-menu.cpp
M  +2    -0    context-menu.h

http://commits.kde.org/telepathy-contact-list/4a65b36090211451621bbd1a1185a1777a04d942
Comment 2 Martin Klapetek 2012-03-14 09:35:42 UTC
Git commit a57ea96a82598efd6ce267cb43125d3f40c31985 by Martin Klapetek.
Committed on 14/03/2012 at 10:32.
Pushed by mklapetek into branch 'master'.

Always hide the overlay buttons when mouse leaves the widget

This makes sure that the presence message is always shown for contacts
when you don't hover over them

Reviewed-by: Dominik Cermak
REVIEW: 104184

M  +11   -0    contact-list-widget.cpp
M  +1    -0    contact-list-widget.h

http://commits.kde.org/telepathy-contact-list/a57ea96a82598efd6ce267cb43125d3f40c31985