Add options to resend and re-request authorization from contacts

Note that it currently crashes haze for msn (purple bug).

Reviewed-by: David Edmundson
BUG: 291820